<resources>
    <string name="app_name">Etchpad</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_export">Export as JPG</string>
    <string name="action_load">Load</string>
    <string name="action_clear">Clear</string>
    <string name="action_host">Host Canvas</string>
    <string name="action_join">Join Canvas</string>
    <string name="action_disconnect">Disconnect Canvas</string>
    <string name="menu_connect">Connect</string>
    <string name="snack_disconnected">Disconnected</string>
    <string name="snack_disconnected_remote">Disconnected by Remote</string>
    <string name="snack_host_cancelled">Hosting Cancelled</string>
    <string name="snack_join_cancelled">Joining Cancelled</string>
    <string name="snack_connected">Connected and Synced!</string>
    <string name="sync_dialog_host_wait">Waiting for client</string>
    <string name="sync_dialog_join_wait">Waiting for host</string>
    <string name="sync_dialog_verify_failed">Verification Rejected</string>
    <string name="model_load">Drawing loaded successfully</string>
    <string name="model_save">Drawing saved successfully</string>
    <string name="model_export">Image saved successfully</string>
    <string name="action_help">Help</string>
    <string name="snack_no_location">Location must be enabled to Host/Join</string>
    <string name="nothing_here">Hmmm… There is nothing here (╯°□°）╯︵ ┻━┻</string>
    <string name="dialog_keep_on_disconnect_title">Keep Canvas?</string>
    <string name="dialog_keep_on_disconnect">The connection has been closed. Would you like to keep the other user\'s
        drawings? You will have to erase the ENTIRE canvas to remove them!
    </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pen_size">Pen Size</string>

    <!-- HELP MENUS -->
    <string name="help_card_about">About Etchpad</string>
    <string name="snack_ready">Ready to Draw!</string>
    <string name="action_color_editor">Color Editor</string>
    <string name="snack_already_connected">You are aleady connected! You must disconnect first.</string>
    <string name="snack_not_connected">You are not connected to anyone. No need to disconnect.</string>
    <string name="sync_dialog_error">Something went wrong! View the help or try again.</string>
    <string name="action_center">Center on Cursor</string>
    <string name="help_card_how_to">How To</string>
    <string name="help_card_how_to_network">How To: Networking</string>
</resources>
