<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="57dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="15dp" android:layout_marginEnd="15dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="15dp" android:id="@+id/help_about">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/help_item_about">
            <ImageView
                    android:layout_width="24dp"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_info_outline_black_24dp" android:id="@+id/imageView" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="16dp"/>
            <TextView
                    android:id="@+id/help_text_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="@string/help_card_about" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent" android:textSize="24sp" app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginStart="16dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="57dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="15dp" android:layout_marginEnd="15dp" app:layout_constraintTop_toBottomOf="@+id/help_about" android:layout_marginTop="15dp" android:id="@+id/help_how_to">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/help_item_how_to">
            <ImageView
                    android:layout_width="24dp"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_help_outline_black_24dp" android:id="@+id/imageView_how_to" app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.5" android:layout_marginStart="16dp"/>
            <TextView
                    android:id="@+id/help_text_how_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="@string/help_card_how_to" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent" android:textSize="24sp" app:layout_constraintStart_toEndOf="@+id/imageView_how_to" android:layout_marginStart="16dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="57dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="15dp" android:layout_marginEnd="15dp" app:layout_constraintTop_toBottomOf="@+id/help_how_to" android:layout_marginTop="15dp" android:id="@+id/help_how_to_network">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/help_item_how_to_network">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_wifi_black_24dp" android:id="@+id/imageView_how_to_network" app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.515" android:layout_marginStart="16dp"/>
            <TextView
                    android:id="@+id/help_text_how_to_network"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="@string/help_card_how_to_network" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent" android:textSize="24sp" app:layout_constraintStart_toEndOf="@+id/imageView_how_to_network" android:layout_marginStart="16dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
